--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
           },
           "CB01":{
               "url":"https://cb01net.fun",
-              "CB_PROXY":"1",
+              "CB_PROXY":"",
               "CB_ForwardProxy":"0",
               "MX_ForwardProxy":"0",
               "MX_PROXY":"0",
@@ -26,32 +26,32 @@
               "url":"https://guardoserie.live",
               "enabled":"1",
               "GS_ForwardProxy":"0",
-              "GS_PROXY":"1"
+              "GS_PROXY":""
           },
           "GuardaHD":{
               "url":"https://mostraguarda.stream",
               "enabled":"1",
               "GH_ForwardProxy":"0",
-              "GH_PROXY":"1"
+              "GH_PROXY":""
           },
           "Eurostreaming":{
             "url": "https://eurostreaming.boston",
             "enabled": "1",
             "ES_ForwardProxy": "0",
-            "ES_PROXY": "1
+            "ES_PROXY": "0
             "
           },  
           "Guardaflix":{
             "url": "https://guardaflix.live",
             "enabled": "1",
             "GF_ForwardProxy": "0",
-            "GF_PROXY": "1"
+            "GF_PROXY": "0"
           },
           "Guardoserie":{
             "url": "https://guardoserie.live",
             "enabled": "1",
             "GO_ForwardProxy": "0",
-            "GO_PROXY": "1"
+            "GO_PROXY": "0"
           },
           "AnimeWorld":{
             "url":"https://www.AnimeWorld.ac",
