--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
                "SC_ForwardProxy": "0",
                "SC_PROXY": "0",
                "VX_ForwardProxy": "0",
-               "VX_PROXY": "0",
+               "VX_PROXY": "1",
                "enabled": "1"
            },
           "StreamingWatch":{
@@ -16,42 +16,42 @@
           },
           "CB01":{
               "url":"https://cb01net.fun",
-              "CB_PROXY":"",
+              "CB_PROXY":"1",
               "CB_ForwardProxy":"0",
               "MX_ForwardProxy":"0",
-              "MX_PROXY":"0",
+              "MX_PROXY":"1",
               "enabled":"1"
           },
           "Guardaserie":{
               "url":"https://guardoserie.live",
               "enabled":"1",
               "GS_ForwardProxy":"0",
-              "GS_PROXY":""
+              "GS_PROXY":"1"
           },
           "GuardaHD":{
               "url":"https://mostraguarda.stream",
               "enabled":"1",
               "GH_ForwardProxy":"0",
-              "GH_PROXY":""
+              "GH_PROXY":"1"
           },
           "Eurostreaming":{
             "url": "https://eurostreaming.boston",
             "enabled": "1",
             "ES_ForwardProxy": "0",
-            "ES_PROXY": "0
-            "
+            "ES_PROXY": "1"
+         
           },  
           "Guardaflix":{
             "url": "https://guardaflix.live",
             "enabled": "1",
             "GF_ForwardProxy": "0",
-            "GF_PROXY": "0"
+            "GF_PROXY": "1"
           },
           "Guardoserie":{
             "url": "https://guardoserie.live",
             "enabled": "1",
             "GO_ForwardProxy": "0",
-            "GO_PROXY": "0"
+            "GO_PROXY": "1"
           },
           "AnimeWorld":{
             "url":"https://www.AnimeWorld.ac",
