--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
               "enabled":"1"
           },
           "Guardaserie":{
-              "url":"https://guardoserie.live",
+              "url":"https://guardaserietv.cc",
               "enabled":"1",
               "GS_ForwardProxy":"0",
               "GS_PROXY":"1"
@@ -48,7 +48,7 @@
             "GF_PROXY": "1"
           },
           "Guardoserie":{
-            "url": "https://guardoserie.live",
+            "url": "https://guardaserietv.cc",
             "enabled": "1",
             "GO_ForwardProxy": "0",
             "GO_PROXY": "1"
